--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>My Website</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
@@ -31,5 +33,6 @@
 	<footer>
 		<p>Copyright © 2023. All rights reserved.</p>
 	</footer>
+	<script src="script.js"></script>
 </body>
 </html>
