--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Researcher in Fluid Mechanics</title>
+    <title>Antonio CHAHINE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       /* Add your CSS styles here */
