--- a/index.html
+++ b/index.html
@@ -1,91 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Antonio CHAHINE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
     <style>
       /* Add your CSS styles here */
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      header {
-        background-color: #007acc;
-        color: #fff;
-        text-align: center;
-        padding: 20px;
-      }
-      h1 {
-        margin: 0;
-      }
-      nav {
-        background-color: #f2f2f2;
-        border-bottom: 1px solid #ccc;
-        padding: 10px;
-      }
-      nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-      }
-      nav ul li {
-        margin: 0;
-        padding: 0;
-      }
-      nav ul li a {
-        display: block;
-        padding: 10px;
-        color: #333;
-        text-decoration: none;
-      }
-      nav ul li a:hover {
-        background-color: #ddd;
-      }
-      main {
-        padding: 20px;
-      }
-      footer {
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 10px;
-      }
     </style>
   </head>
   <body>
-    <header>
-      <h1>Researcher in Fluid Mechanics</h1>
-    </header>
+    <!-- Navigation menu -->
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Research</a></li>
-        <li><a href="#">Publications</a></li>
-        <li><a href="#">Teaching</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#research">Research</a></li>
+        <li><a href="#publications">Publications</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <main>
+
+    <!-- Main content sections -->
+    <section id="home">
+      <h1>Welcome to My Website</h1>
+      <p>Here's where you can introduce yourself and your research.</p>
+    </section>
+
+    <section id="about">
       <h2>About Me</h2>
-      <p>Hello, I am a researcher in fluid mechanics. My research interests include computational fluid dynamics, turbulence, and multiphase flows. I am also interested in the application of fluid mechanics to various fields, such as aerospace engineering, energy, and environmental engineering.</p>
+      <p>Here's where you can provide information about yourself.</p>
+    </section>
+
+    <section id="research">
       <h2>Research</h2>
-      <p>My current research focuses on developing numerical methods for simulating turbulent flows in complex geometries, such as porous media and biological systems. I am also interested in the analysis of turbulence and its effects on heat transfer and mass transfer.</p>
+      <p>Here's where you can showcase your research projects and findings.</p>
+    </section>
+
+    <section id="publications">
       <h2>Publications</h2>
-      <ul>
-        <li>First Publication</li>
-        <li>Second Publication</li>
-        <li>Third Publication</li>
-      </ul>
-      <h2>Teaching</h2>
-      <p>I teach courses on fluid mechanics, numerical methods, and computational fluid dynamics at the undergraduate and graduate level.</p>
-      <h2>Contact</h2>
-      <p>You can contact me at email@example.com or follow me on Twitter at @researcherfluid.</p>
-    </main>
-    <footer>
-      &copy; 2023 Researcher in Fluid Mechanics
-    </footer>
+      <p>Here's where you can list your published work.</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Here's where you can provide contact information and a contact form for visitors to reach out to you.</p>
+    </section>
+
+    <!-- Add your JavaScript for interactivity here -->
   </body>
 </html>
