--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <title>Antonio Chahine</title>
     <style>
       /* Add your CSS styles here */
     </style>
@@ -10,40 +10,23 @@
     <!-- Navigation menu -->
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#research">Research</a></li>
-        <li><a href="#publications">Publications</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
-    <!-- Main content sections -->
+    <!-- Main content section -->
     <section id="home">
-      <h1>Welcome to My Website</h1>
-      <p>Here's where you can introduce yourself and your research.</p>
+      <h1>Welcome to Antonio Chahine's Website</h1>
+      <div id="slideshow">
+        <img src="images/photo1.jpg" alt="Photo 1">
+        <img src="images/photo2.jpg" alt="Photo 2">
+        <img src="images/photo3.jpg" alt="Photo 3">
+      </div>
     </section>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Here's where you can provide information about yourself.</p>
-    </section>
-
-    <section id="research">
-      <h2>Research</h2>
-      <p>Here's where you can showcase your research projects and findings.</p>
-    </section>
-
-    <section id="publications">
-      <h2>Publications</h2>
-      <p>Here's where you can list your published work.</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>Here's where you can provide contact information and a contact form for visitors to reach out to you.</p>
-    </section>
-
-    <!-- Add your JavaScript for interactivity here -->
+    <!-- Add your JavaScript for the photo slideshow here -->
   </body>
 </html>
