--- a/index.html
+++ b/index.html
@@ -1,66 +1,98 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Antonio Chahine</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <title>Antonio CHAHINE</title>
+    <style>
+      /* CSS styles for the website */
+      body {
+        font-family: Arial, sans-serif;
+      }
+      header {
+        background-color: #333;
+        color: white;
+        padding: 20px;
+        text-align: center;
+      }
+      nav {
+        background-color: #f1f1f1;
+        overflow: hidden;
+      }
+      nav a {
+        float: left;
+        display: block;
+        color: #333;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      nav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      .quote {
+        font-size: 24px;
+        font-style: italic;
+        text-align: center;
+        margin-top: 50px;
+      }
+      .columns {
+        display: flex;
+      }
+      .column {
+        flex: 50%;
+        padding: 10px;
+      }
+      .column img {
+        width: 100%;
+      }
+      .section {
+        text-align: center;
+        margin-top: 50px;
+      }
+      .icon {
+        display: inline-block;
+        margin: 10px;
+      }
+      .icon img {
+        height: 50px;
+      }
+    </style>
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="logo">
-          <a href="#">Antonio Chahine</a>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#research">Research</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+      <h1>Antonio CHAHINE</h1>
     </header>
-    <section class="hero">
-      <div class="container">
-        <div class="hero-text">
-          <h1>Antonio Chahine</h1>
-          <h2>Researcher in Fluid Mechanics</h2>
+    <nav>
+      <a href="index.html" target="_blank">Home</a>
+      <a href="research.html" target="_blank">Research</a>
+      <a href="publications.html" target="_blank">Publications</a>
+      <a href="gallery.html" target="_blank">Gallery</a>
+    </nav>
+    <div class="quote">
+      <div class="columns">
+        <div class="column">
+          <img src="me.jpg" alt="Antonio CHAHINE">
+        </div>
+        <div class="column">
+          <p>Hi, I'm Antonio CHAHINE, a researcher passionate about exploring new horizons in science and technology. My work focuses on...</p>
         </div>
       </div>
-    </section>
-    <section class="research" id="research">
-      <div class="container">
-        <h2>Research</h2>
-        <p>Here you can describe your research interests, projects, and findings. You can also include links to any papers or presentations you have given.</p>
+    </div>
+    <div class="section">
+      <h2>Home</h2>
+      <p>Welcome to my website! This is the home page.</p>
+      <div class="icon">
+        <a href="mailto:myemail@example.com" target="_blank"><img src="email.png" alt="Email"></a>
       </div>
-    </section>
-    <section class="publications" id="publications">
-      <div class="container">
-        <h2>Publications</h2>
-        <p>Here you can showcase your published works, including journal articles, conference papers, and book chapters. You can include links to your publications or provide a summary of your findings.</p>
+      <div class="icon">
+        <a href="https://www.linkedin.com/in/mylinkedin" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
       </div>
-    </section>
-    <section class="contact" id="contact">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>Here you can provide your contact information, including your email address, phone number, and office location. You can also include a contact form that visitors can use to send you a message.</p>
+      <div class="icon">
+        <a href="https://www.researchgate.net/profile/myresearchgate" target="_blank"><img src="researchgate.png" alt="ResearchGate"></a>
       </div>
-    </section>
-    <section class="photo-box">
-      <div class="container">
-        <div class="photo-slideshow">
-          <img src="photo1.jpg" alt="Photo 1">
-          <img src="photo2.jpg" alt="Photo 2">
-          <img src="photo3.jpg" alt="Photo 3">
-        </div>
-      </div>
-    </section>
-    <footer>
-      <div class="container">
-        <p>Copyright © 2023 Antonio Chahine</p>
-      </div>
-    </footer>
-  </body>
-</html>
+    </div>
+    <div class="section">
+      <h2>Research</h2>
+      <p>Here you can find information about my research interests and projects.</p>
+      <div class="icon">
+        <a href
