--- a/index.html
+++ b/index.html
@@ -1,98 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Antonio CHAHINE</title>
-    <style>
-      /* CSS styles for the website */
-      body {
-        font-family: Arial, sans-serif;
-      }
-      header {
-        background-color: #333;
-        color: white;
-        padding: 20px;
-        text-align: center;
-      }
-      nav {
-        background-color: #f1f1f1;
-        overflow: hidden;
-      }
-      nav a {
-        float: left;
-        display: block;
-        color: #333;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-      nav a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-      .quote {
-        font-size: 24px;
-        font-style: italic;
-        text-align: center;
-        margin-top: 50px;
-      }
-      .columns {
-        display: flex;
-      }
-      .column {
-        flex: 50%;
-        padding: 10px;
-      }
-      .column img {
-        width: 100%;
-      }
-      .section {
-        text-align: center;
-        margin-top: 50px;
-      }
-      .icon {
-        display: inline-block;
-        margin: 10px;
-      }
-      .icon img {
-        height: 50px;
-      }
-    </style>
+    <title>My Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
-      <h1>Antonio CHAHINE</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <h1>My Website</h1>
     </header>
-    <nav>
-      <a href="index.html" target="_blank">Home</a>
-      <a href="research.html" target="_blank">Research</a>
-      <a href="publications.html" target="_blank">Publications</a>
-      <a href="gallery.html" target="_blank">Gallery</a>
-    </nav>
-    <div class="quote">
-      <div class="columns">
-        <div class="column">
-          <img src="me.jpg" alt="Antonio CHAHINE">
-        </div>
-        <div class="column">
-          <p>Hi, I'm Antonio CHAHINE, a researcher passionate about exploring new horizons in science and technology. My work focuses on...</p>
-        </div>
-      </div>
-    </div>
-    <div class="section">
-      <h2>Home</h2>
-      <p>Welcome to my website! This is the home page.</p>
-      <div class="icon">
-        <a href="mailto:myemail@example.com" target="_blank"><img src="email.png" alt="Email"></a>
-      </div>
-      <div class="icon">
-        <a href="https://www.linkedin.com/in/mylinkedin" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
-      </div>
-      <div class="icon">
-        <a href="https://www.researchgate.net/profile/myresearchgate" target="_blank"><img src="researchgate.png" alt="ResearchGate"></a>
-      </div>
-    </div>
-    <div class="section">
-      <h2>Research</h2>
-      <p>Here you can find information about my research interests and projects.</p>
-      <div class="icon">
-        <a href
+    <main>
+      <section>
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin mattis lacus, ut venenatis eros posuere sed. </p>
+      </section>
+      <section>
+        <h2>Our Services</h2>
+        <ul>
+          <li>Service 1</li>
+          <li>Service 2</li>
+          <li>Service 3</li>
+          <li>Service 4</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li><img src="portfolio-item-1.jpg" alt="Portfolio Item 1"></li>
+          <li><img src="portfolio-item-2.jpg" alt="Portfolio Item 2"></li>
+          <li><img src="portfolio-item-3.jpg" alt="Portfolio Item 3"></li>
+          <li><img src="portfolio-item-4.jpg" alt="Portfolio Item 4"></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Latest Blog Posts</h2>
+        <ul>
+          <li><a href="#">Blog Post 1</a></li>
+          <li><a href="#">Blog Post 2</a></li>
+          <li><a href="#">Blog Post 3</a></li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 My Website. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
