--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r<!DOCTYPE html>
 <html>
 <head>
 	<title>My Website</title>
@@ -11,9 +11,8 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="#">Research</a></li>
+				<li><a href="#">Publications</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -23,19 +22,11 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tellus libero. Sed non elit non elit vestibulum sagittis vel non ante. In eu aliquam nunc. Proin aliquam lorem id nulla scelerisque, in blandit eros luctus. Donec ullamcorper massa sit amet velit ultrices, nec vulputate turpis dignissim.</p>
 		</section>
 		<section>
-			<h2>About us</h2>
+			<h2>Research us</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tellus libero. Sed non elit non elit vestibulum sagittis vel non ante. In eu aliquam nunc. Proin aliquam lorem id nulla scelerisque, in blandit eros luctus. Donec ullamcorper massa sit amet velit ultrices, nec vulputate turpis dignissim.</p>
 		</section>
 		<section>
-			<h2>Our services</h2>
-			<ul>
-				<li>Service 1</li>
-				<li>Service 2</li>
-				<li>Service 3</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Contact us</h2>
+			<h2>Publications</h2>
 			<form>
 				<label for="name">Name:</label>
 				<input type="text" id="name" name="name"><br><br>
@@ -48,7 +39,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>&copy; 2023 My Website. All rights reserved.</p>
+		<p>&copy; Antonio CHAHINE. All rights reserved.</p>
 	</footer>
 </body>
 </html>
