--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 r<!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>Antonio CHAHINE</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -16,28 +16,6 @@ r<!DOCTYPE html>
 			</ul>
 		</nav>
 	</header>
-	<main>
-		<section>
-			<h1>Welcome to my website</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tellus libero. Sed non elit non elit vestibulum sagittis vel non ante. In eu aliquam nunc. Proin aliquam lorem id nulla scelerisque, in blandit eros luctus. Donec ullamcorper massa sit amet velit ultrices, nec vulputate turpis dignissim.</p>
-		</section>
-		<section>
-			<h2>Research us</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tellus libero. Sed non elit non elit vestibulum sagittis vel non ante. In eu aliquam nunc. Proin aliquam lorem id nulla scelerisque, in blandit eros luctus. Donec ullamcorper massa sit amet velit ultrices, nec vulputate turpis dignissim.</p>
-		</section>
-		<section>
-			<h2>Publications</h2>
-			<form>
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name"><br><br>
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email"><br><br>
-				<label for="message">Message:</label>
-				<textarea id="message" name="message"></textarea><br><br>
-				<input type="submit" value="Submit">
-			</form>
-		</section>
-	</main>
 	<footer>
 		<p>&copy; Antonio CHAHINE. All rights reserved.</p>
 	</footer>
